feat: 重新定位v0.4为项目协作平台
**核心调整**：从外包平台转向项目协作平台

**需求规格说明书_v0.4**：
- 核心模式：项目发起→拆解环节→认领→API完成→贡献分成
- 两种使用方式：社区模式（现金）+ 企业模式（积分）
- 专长标签：自己定义 + 系统打分
- 分成规则：按实际贡献分配
- 技术栈：React + Node.js + PostgreSQL
- 9周开发周期

**场景设计文档_v0.4**：
- 6个核心场景
- 场景1：社区发布项目
- 场景2：参与者认领环节
- 场景3：贡献代码追踪
- 场景4：企业发布项目
- 场景5：贡献度计算与分成
- 场景6：专长标签管理

**v0.4核心改进**：
- 砍掉外包模式，转向项目协作
- 区分社区（现金）/企业（积分）双模式
- 按实际贡献分成，不是固定价格
- 专长标签自己定义，系统打分
- 贡献度追踪：代码提交/文档/测试

文件：
- requirements/产品需求规格说明书_v0.4.md (7.5KB)
- scenarios/场景设计文档_v0.4.md (31KB)

--- a/requirements/产品需求规格说明书_v0.4.md
+++ b/requirements/产品需求规格说明书_v0.4.md
@@ -1,599 +1,455 @@
 # AI Project Management Platform - 需求规格说明书 v0.4
 
-> **版本说明**：聚焦MVP可落地性，精简功能，明确边界，快速验证商业模式
+> **版本说明**：聚焦项目协作平台，区分社区/企业双模式，按实际贡献分成
 
 ---
 
-## 一、核心定位调整
+## 一、核心定位
 
-### 1.1 产品定位（v0.4版）
+### 1.1 产品愿景
 
-**AI 任务外包平台** - 一个连接 AI 能力提供方与需求方的轻量级交易平台。
+> "让 AI 算力和专业能力像水电一样，按需取用，按贡献分配"
 
-> **核心理念**：先跑通交易闭环，再迭代智能功能
-
-### 1.2 战略调整
-
-| 维度 | v0.3 | v0.4 |
-|------|-------|-------|
-| **目标** | 开放生态 | 快速验证 |
-| **功能** | 完整复杂 | 精简核心 |
-| **技术** | 高大上 | 务实可行 |
-| **开放** | 全开放 | 逐步开放 |
-| **周期** | 长周期 | 快速迭代 |
-
-### 1.3 产品愿景
-
-> "让 AI 任务外包像点外卖一样简单"
-
----
-
-## 二、MVP 边界定义
-
-### 2.1 只做这三件事
+### 1.2 核心模式
 
 ```
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│                           MVP 核心三角                                      │
+│                           项目协作核心模式                                  │
 │                                                                             │
-│                          ┌─────────────┐                                   │
-│                          │  需求发布   │                                   │
-│                          │  雇主发任务  │                                   │
-│                          └──────┬──────┘                                   │
-│                                 │                                          │
-│              ┌────────────────┼────────────────┐                        │
-│              │                │                │                        │
-│              ▼                ▼                ▼                        │
-│     ┌─────────────┐  ┌─────────────┐  ┌─────────────┐                 │
-│     │  AI 能力   │  │  任务执行   │  │  资金托管   │                 │
-│     │  展示对接   │  │  进度跟踪   │  │  验收结算   │                 │
-│     └─────────────┘  └─────────────┘  └─────────────┘                 │
+│      项目发起人                                                            │
+│          │                                                                │
+│          ▼                                                                │
+│      发布项目 ── 拆解环节 ── 参与者认领 ── 用自己API完成 ── 按贡献分成 │
 │                                                                             │
 └─────────────────────────────────────────────────────────────────────────────┘
 ```
 
-### 2.2 MVP不做的事（v0.4阶段）
+### 1.3 两种使用方式
 
-| 功能 | 原因 | 延后时间 |
-|------|------|----------|
-| AI 需求解析 | 技术复杂，先用模板替代 | v1.1 |
-| 智能匹配推荐 | 需要数据积累，先手动匹配 | v1.1 |
-| AI Agents 市场 | 概念超前，验证后再做 | v1.2 |
-| 开放协议层 | 需要生态配合 | v2.0 |
-| 开源组件 | 精力有限 | v2.0 |
-| 高级信誉系统 | 复杂度高，先用简单评分 | v1.1 |
-| 复杂工作流引擎 | 先做单任务模式 | v1.2 |
-| 合规认证 | 优先级低 | v1.5 |
-| 发票税务 | 法律复杂，先跳过 | v2.0 |
-| 第三方集成 | GitHub/Jira等 | v1.2 |
+| 维度 | 社区模式 | 企业模式 |
+|------|---------|---------|
+| **发起** | 任何人可发起 | 内部成员可发起 |
+| **参与** | 开放参与 | 内部成员参与 |
+| **可见性** | 公开项目 | 私有项目 |
+| **收益** | 现金分成 | 积分统计 |
+| **分成规则** | 按贡献实际分配 | 按贡献实际分配 |
 
 ---
 
-## 三、功能模块设计（v0.4 MVP）
+## 二、核心功能模块
 
-### 3.1 模块总览
-
-```
-┌─────────────────────────────────────────────────────────────┐
-│                    AI 任务外包平台 (MVP)                   │
-├─────────────────────────────────────────────────────────────┤
-│                                                              │
-│  ┌──────────────┐  ┌──────────────┐  ┌──────────────┐  │
-│  │   需求发布   │  │   任务大厅   │  │   我的项目   │  │
-│  │   发布任务   │  │  浏览/接单   │  │  管理项目   │  │
-│  └──────────────┘  └──────────────┘  └──────────────┘  │
-│                                                              │
-│  ┌──────────────┐  ┌──────────────┐  ┌──────────────┐  │
-│  │   资金中心   │  │   用户中心   │  │   消息中心   │  │
-│  │  充值/结算   │  │  注册/登录   │  │  任务沟通   │  │
-│  └──────────────┘  └──────────────┘  └──────────────┘  │
-│                                                              │
-└─────────────────────────────────────────────────────────────┘
-```
-
-### 3.2 需求发布模块
-
-#### 3.2.1 任务发布（简化版）
-
-**任务类型**（仅支持4类）：
-| 类型 | 描述 | 示例 |
-|------|------|------|
-| 代码开发 | 编写、调试、重构代码 | API开发、Bug修复 |
-| 内容生成 | 文本、图像生成 | 文案撰写、Logo设计 |
-| 数据处理 | 数据清洗、分析、可视化 | 报表、清洗 |
-| 文档撰写 | 技术文档、说明文档 | README、API文档 |
-
-**任务表单**：
-```yaml
-任务:
-  title: 简短标题         # 必填，50字内
-  type: 代码开发          # 必选，4选1
-  description: 详细描述     # 必填，500字内
-  acceptance: 验收标准     # 必填，3-5条
-  budget: 500            # 必填，单位元
-  deadline: 2026-03-01   # 必填，最长30天
-  attachments: []        # 可选，截图/文档
-```
-
-#### 3.2.2 任务模板（替代AI解析）
-
-**预设模板**：
-| 模板名称 | 适用场景 | 默认字段 |
-|---------|----------|----------|
-| Bug修复 | 修复已知问题 | acceptance: 问题修复 |
-| 新功能开发 | 开发新功能 | 默认3条验收 |
-| 代码重构 | 重构旧代码 | acceptance: 功能不变 |
-| 数据分析 | 数据处理 | acceptance: 输出格式 |
-
----
-
-### 3.3 任务大厅模块
-
-#### 3.3.1 任务列表
-
-**筛选条件**：
-- 任务类型（4选1）
-- 预算范围（区间选择）
-- 截止时间（区间选择）
-- 排序方式（最新/预算/紧急）
-
-**任务卡片展示**：
-```
-┌─────────────────────────────────────────┐
-│ [代码开发] RESTful API 开发            │
-│ ¥800-1200 | 预计3天 | 紧急           │
-│ 描述：开发用户认证 RESTful API...      │
-│ 截止：3天后 | 已有 2 人竞标          │
-└─────────────────────────────────────────┘
-```
-
-#### 3.3.2 接单流程
-
-**AI 方接单**：
-1. 查看任务详情
-2. 填写报价（可选，雇主也可设定固定价）
-3. 提交接单申请
-4. 雇主确认
-
-**雇主确认**：
-1. 查看接单方历史记录（简单评分）
-2. 选择接单方
-3. 开始任务
-
----
-
-### 3.4 我的项目模块
-
-#### 3.4.1 项目看板
-
-**雇主视角**：
-| 状态 | 描述 | 操作 |
-|------|------|------|
-| 待接单 | 任务发布，等待AI接单 | 取消/编辑 |
-| 进行中 | AI正在执行 | 查看进度/沟通 |
-| 待验收 | AI提交，等待验收 | 验收/退款 |
-| 已完成 | 验收通过 | 评价/复购 |
-| 已取消 | 任务取消 | - |
-
-**AI方视角**：
-| 状态 | 描述 | 操作 |
-|------|------|------|
-| 待接单 | 可申请接单 | 申请接单 |
-| 已申请 | 等待雇主确认 | 取消申请 |
-| 进行中 | 执行任务中 | 提交成果/沟通 |
-| 待验收 | 等待验收 | 提醒验收 |
-| 已完成 | 任务完成 | 提现/接新单 |
-
-#### 3.4.2 任务进度
-
-**进度更新**：
-- AI方手动更新进度（简单选择：25%/50%/75%/100%）
-- 支持添加备注说明
-
-**沟通记录**：
-- 任务相关沟通记录
-- 支持文字+图片
-
-#### 3.4.3 成果提交
-
-**提交内容**：
-- 代码仓库地址
-- 或文件附件
-- 或在线演示链接
-- 补充说明
-
----
-
-### 3.5 资金中心模块
-
-#### 3.5.1 资金托管
-
-**流程**：
-```
-雇主发布任务 → 预付资金到平台 → AI执行任务 → 雇主验收 → 资金转给AI
-                                        ↓
-                                   验收不通过
-                                        ↓
-                                   退款给雇主 / 协商处理
-```
-
-**资金安全**：
-- 任务未完成可申请退款
-- 争议时资金冻结
-- 平台不挪用资金
-
-#### 3.5.2 结算方式
-
-**抽佣比例**：
-| 交易金额 | 平台抽佣 |
-|---------|----------|
-| < ¥500 | 15% |
-| ¥500-2000 | 12% |
-| ¥2000-10000 | 10% |
-| > ¥10000 | 8% |
-
-**结算周期**：
-- 验收后即时结算
-- 提现 T+1 到账
-
----
-
-### 3.6 用户中心模块
-
-#### 3.6.1 注册登录
-
-**方式**：
-- 邮箱注册
-- GitHub OAuth
-- Google OAuth
-
-**实名认证**：
-- 暂不需要（MVP阶段）
-- 后续根据政策调整
-
-#### 3.6.2 简单评分系统（替代复杂信誉）
-
-**评分维度**（仅2个）：
-| 维度 | 描述 | 计算 |
-|------|------|------|
-| 完成任务数 | 成功完成任务数 | 计数 |
-| 平均评分 | 雇主对AI的评分均值 | 平均值 |
-
-**展示信息**：
-- 完成任务数
-- 平均评分（5分制）
-- 最近3个任务记录
-
----
-
-### 3.7 消息中心模块
-
-#### 3.7.1 任务沟通
-
-**功能**：
-- 任务相关沟通
-- 支持文字+图片
-- 不支持语音/视频
-
-#### 3.7.2 系统通知
-
-**类型**：
-- 接单申请
-- 进度更新
-- 验收提醒
-- 结算完成
-
----
-
-## 四、技术架构（v0.4 MVP）
-
-### 4.1 架构设计（简化版）
+### 2.1 模块总览
 
 ```
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│                           技术架构图                                        │
+│                      AI 项目协作平台                                        │
 ├─────────────────────────────────────────────────────────────────────────────┤
 │                                                                             │
-│  ┌─────────────────────────────────────────────────────────────────────┐  │
-│  │                        前端层                                          │  │
-│  │   ┌─────────────┐  ┌─────────────┐  ┌─────────────┐               │  │
-│  │   │   Web端     │  │  移动端H5   │  │  管理后台   │               │  │
-│  │   │  (React)   │  │  (React)   │  │  (React)   │               │  │
-│  │   └─────────────┘  └─────────────┘  └─────────────┘               │  │
-│  │                                                                      │  │
-│  └─────────────────────────────────────────────────────────────────────┘  │
-│                                    ↓                                       │
-│  ┌─────────────────────────────────────────────────────────────────────┐  │
-│  │                        API层                                         │  │
-│  │   ┌─────────────────────────────────────────────────────────────┐    │  │
-│  │   │                   Node.js / Express                        │    │  │
-│  │   │                   RESTful API                              │    │  │
-│  │   └─────────────────────────────────────────────────────────────┘    │  │
-│  │                                                                      │  │
-│  └─────────────────────────────────────────────────────────────────────┘  │
-│                                    ↓                                       │
-│  ┌─────────────────────────────────────────────────────────────────────┐  │
-│  │                        数据层                                         │  │
-│  │   ┌─────────────┐  ┌─────────────┐  ┌─────────────┐               │  │
-│  │   │  PostgreSQL │  │   Redis    │  │  OSS/S3    │               │  │
-│  │   │  (主数据)   │  │  (缓存)    │  │  (文件存储) │               │  │
-│  │   └─────────────┘  └─────────────┘  └─────────────┘               │  │
-│  │                                                                      │  │
-│  └─────────────────────────────────────────────────────────────────────┘  │
-│                                                                             │
-│  ┌─────────────────────────────────────────────────────────────────────┐  │
-│  │                        基础设施                                      │  │
-│  │   ┌─────────────┐  ┌─────────────┐  ┌─────────────┐               │  │
-│  │   │  云服务器   │  │  域名/DNS   │  │  HTTPS证书 │               │  │
-│  │   │  (1-2台)   │  │             │  │            │               │  │
-│  │   └─────────────┘  └─────────────┘  └─────────────┘               │  │
-│  │                                                                      │  │
-│  └─────────────────────────────────────────────────────────────────────┘  │
+│  ┌──────────────┐  ┌──────────────┐  ┌──────────────┐              │
+│  │   项目中心   │  │   环节市场   │  │   参与者    │              │
+│  │   发布/管理  │  │   浏览/认领  │  │   专长/档案  │              │
+│  └──────────────┘  └──────────────┘  └──────────────┘              │
+│         │                 │                 │                           │
+│  ┌──────────────┐  ┌──────────────┐  ┌──────────────┐              │
+│  │   贡献度    │  │   资金/积分  │  │   消息中心  │              │
+│  │   跟踪记录  │  │   分成结算   │  │   协作沟通  │              │
+│  └──────────────┘  └──────────────┘  └──────────────┘              │
 │                                                                             │
 └─────────────────────────────────────────────────────────────────────────────┘
 ```
 
-### 4.2 技术选型（v0.4）
+### 2.2 MVP核心功能
 
-| 层级 | 技术 | 选型理由 |
-|------|------|----------|
-| **前端** | React + Ant Design | 组件丰富，开发快 |
-| **后端** | Node.js + Express | 轻量，熟悉度高 |
-| **数据库** | PostgreSQL | 关系数据成熟稳定 |
-| **缓存** | Redis | 简单场景够用 |
-| **文件存储** | 阿里云 OSS | 成本低，稳定 |
-| **部署** | Docker + 1台云服务器 | 简单，成本低 |
+| 模块 | 功能 | 说明 |
+|------|------|------|
+| **项目中心** | 发布项目 | 发起人发布项目，拆解环节 |
+| | 管理项目 | 查看进度，管理参与者 |
+| | 项目列表 | 浏览公开项目 |
+| **环节市场** | 浏览环节 | 查看待认领的任务 |
+| | 认领环节 | 参与者认领任务 |
+| | 放弃环节 | 释放任务 |
+| **参与者** | 专长标签 | 自定义擅长领域 |
+| | 个人档案 | 查看历史贡献 |
+| | 系统评分 | 完成率/评分/响应 |
+| **贡献度** | 贡献记录 | 跟踪每个贡献 |
+| | 贡献证明 | 代码提交/文档/成果 |
+| | 分成计算 | 按贡献比例分配 |
+| **资金/积分** | 社区：现金 | 支付宝/微信结算 |
+| | 企业：积分 | 工时/积分统计 |
+| **消息中心** | 任务沟通 | 协作沟通 |
+| | 系统通知 | 状态变更通知 |
 
-### 4.3 开发周期预估
+---
+
+## 三、项目发布与管理
+
+### 3.1 发布项目
+
+**项目表单**：
+```yaml
+项目:
+  title: 项目名称              # 必填
+  description: 项目描述         # 必填
+  visibility: [公开/私有]      # 社区=公开，企业=私有
+  mode: [社区/企业]           # 选择模式
+  total_budget: 10000         # 社区模式必填（预算）
+  
+  # 环节拆解
+  milestones:
+    - name: 环节1名称
+      description: 环节描述
+      budget: 3000            # 环节预算
+      skills: [Python, React]  # 需要的专长
+      evidence: [代码, 文档]   # 需要提交的成果
+    
+    - name: 环节2名称
+      # ...
+```
+
+### 3.2 贡献度跟踪
+
+```
+贡献类型：
+├─ 代码贡献
+│  ├─ Git提交记录
+│  ├─ PR/Merge记录
+│  └─ 代码审查记录
+│
+├─ 文档贡献
+│  ├─ 文档编写
+│  └─ 文档维护
+│
+└─ 其他贡献
+   ├─ 测试记录
+   ├─ 问题修复
+   └─ 技术支持
+```
+
+**贡献计算**：
+```
+贡献度 = Σ(贡献权重 × 贡献数量) / 总贡献
+
+权重示例：
+├─ 代码提交：1.0
+├─ 文档编写：0.5
+├─ 问题修复：0.8
+└─ 代码审查：0.3
+```
+
+---
+
+## 四、参与者与专长
+
+### 4.1 专长标签
+
+**用户自定义标签**：
+```yaml
+标签类型:
+├─ 技术栈:
+│  ├─ 前端: React / Vue / Angular
+│  ├─ 后端: Python / Go / Node.js
+│  ├─ AI/ML: TensorFlow / PyTorch
+│  └─ 数据库: MySQL / PostgreSQL / MongoDB
+│
+├─ 专业领域:
+│  ├─ 架构设计
+│  ├─ 性能优化
+│  ├─ 安全加固
+│  └─ 技术文档
+│
+└─ 工具/平台:
+   ├─ Claude / GPT-4
+   ├─ Cursor / GitHub Copilot
+   └─ Docker / K8s
+```
+
+### 4.2 系统评分
+
+```
+评分维度:
+├─ 完成率 = 完成任务数 / 承接任务数
+├─ 质量分 = 平均验收评分 (5分制)
+├─ 响应分 = 平均响应时间评分
+└─ 协作分 = 同行/发起人评价
+
+系统评分 = 完成率(40%) + 质量分(35%) + 响应分(15%) + 协作分(10%)
+```
+
+### 4.3 个人档案
+
+```
+档案展示:
+├─ 专长标签（自己定义）
+├─ 系统评分（完成率/质量/响应/协作）
+├─ 历史项目
+│  ├─ 参与项目数
+│  ├─ 贡献度排名
+│  └─ 获得分成
+├─ 擅长环节类型
+└─ 联系方式（可选）
+```
+
+---
+
+## 五、分成结算
+
+### 5.1 分成规则
+
+**按实际贡献分配**：
+```
+项目总预算 = ¥10,000
+
+环节1：¥3000
+├─ 参与者A：贡献度60% → ¥1800
+└─ 参与者B：贡献度40% → ¥1200
+
+环节2：¥5000
+├─ 参与者C：贡献度50% → ¥2500
+└─ 参与者D：贡献度50% → ¥2500
+
+环节3：¥2000
+├─ 发起人：贡献度30% → ¥600
+├─ 参与者E：贡献度40% → ¥800
+└─ 参与者F：贡献度30% → ¥600
+```
+
+### 5.2 结算流程
+
+```
+项目完成 → 发起人验收 → 生成贡献报告 → 确认分成比例 → 资金/积分分配
+                                    │
+                                    ▼
+                              ┌─────────────┐
+                              │ 争议处理   │
+                              │ 7天内申诉  │
+                              └─────────────┘
+```
+
+### 5.3 两种模式结算
+
+| 维度 | 社区模式 | 企业模式 |
+|------|---------|---------|
+| **资金来源** | 发起人预付 | 企业预算 |
+| **分成形式** | 现金 | 积分/工时 |
+| **结算时间** | 验收后T+1 | 月度统计 |
+| **提现** | 支付宝/微信 | 积分商城 |
+
+---
+
+## 六、技术架构（MVP）
+
+### 6.1 技术选型
+
+| 层级 | 技术 | 说明 |
+|------|------|------|
+| **前端** | React + Ant Design | 组件丰富 |
+| **后端** | Node.js + Express | 轻量熟悉 |
+| **数据库** | PostgreSQL | 关系数据 |
+| **缓存** | Redis | Session/缓存 |
+| **Git集成** | GitHub API | 贡献追踪 |
+| **部署** | Docker + 1台云服务器 | 简单成本低 |
+
+### 6.2 数据模型
+
+```
+核心表:
+├─ users                    # 用户表
+├─ projects                 # 项目表
+├─ project_milestones       # 项目环节表
+├─ milestone_contributions   # 贡献记录表
+├─ contributions            # 贡献明细表
+├─ settlements              # 结算表
+└─ user_skills              # 用户专长表
+```
+
+### 6.3 开发周期
 
 | 阶段 | 时间 | 内容 |
 |------|------|------|
 | 设计 | 1周 | 详细设计、接口定义 |
-| 前端 | 3周 | Web端 + H5 |
-| 后端 | 3周 | API + 数据库 |
+| 前端 | 3周 | React开发 |
+| 后端 | 3周 | API + Git集成 |
 | 测试 | 1周 | 功能测试 |
-| 部署 | 1周 | 上线准备 |
-| **总计** | **9周** | **2个月** |
+| 部署 | 1周 | 上线 |
+| **合计** | **9周** | 2个月 |
 
 ---
 
-## 五、商业模式（v0.4）
+## 七、商业模式
 
-### 5.1 收入来源（只做抽佣）
+### 7.1 收入来源（社区模式）
 
 | 模式 | 比例 | 说明 |
 |------|------|------|
-| **交易抽佣** | 8-15% | 核心收入 |
+| **交易抽佣** | 8-15% | 项目预算抽佣 |
 
-> **不做会员订阅（验证期）**  
-> **不做企业服务（先验证平台价值）**  
-> **不做AI能力佣金（雇主直接付给平台，平台抽佣）**
+### 7.2 抽佣比例
 
-### 5.2 定价策略
+| 预算范围 | 抽佣比例 |
+|---------|----------|
+| < ¥5,000 | 15% |
+| ¥5,000-20,000 | 12% |
+| ¥20,000-100,000 | 10% |
+| > ¥100,000 | 8% |
 
-**抽佣比例**：
-| 订单金额 | 抽佣比例 | 平台收入 |
-|---------|----------|----------|
-| < ¥500 | 15% | ¥75 |
-| ¥500-2000 | 12% | ¥60-240 |
-| ¥2000-10000 | 10% | ¥200-1000 |
-| > ¥10000 | 8% | > ¥800 |
+### 7.3 成本结构
 
-### 5.3 收入预估（乐观情况）
+| 项目 | 月成本 |
+|------|--------|
+| 云服务器 | ¥500-1000 |
+| 数据库 | ¥300 |
+| 运维 | ¥2000 |
+| **合计** | ¥3000-3500 |
 
-| 月份 | 月交易额 | 平台收入 | 备注 |
-|------|---------|----------|------|
-| 第1月 | ¥50,000 | ¥6,000 | 种子用户期 |
-| 第3月 | ¥200,000 | ¥24,000 | 增长期 |
-| 第6月 | ¥1,000,000 | ¥120,000 | 稳定期 |
+### 7.4 盈亏平衡
 
-### 5.4 成本结构
-
-| 项目 | 月成本 | 说明 |
-|------|--------|------|
-| 云服务器 | ¥500-1000 | 1-2台 |
-| 域名/SSL | ¥100 | |
-| 数据库 | ¥300 | RDS |
-| 文件存储 | ¥100 | OSS |
-| 运维 | ¥2000 | 兼职 |
-| **合计** | **¥3000-3500** | |
-
-### 5.5 盈亏平衡
-
-- **月交易额 ¥30,000** 可覆盖成本
-- **月交易额 ¥100,000** 可开始盈利
+- 月交易额 ¥30,000 → 覆盖成本
+- 月交易额 ¥100,000 → 开始盈利
 
 ---
 
-## 六、运营策略（v0.4）
+## 八、运营策略
 
-### 6.1 冷启动策略
+### 8.1 冷启动
 
-**目标**：获取第一批雇主和AI方
-
-**策略**：
-| 角色 | 获取方式 | 目标数量 |
-|------|----------|----------|
-| 雇主 | 技术社群推广 | 50人 |
-| AI方 | 开发者社区招募 | 100人 |
-
-**冷启动活动**：
-1. V2EX 发帖推广
-2. GitHub 热门项目评论
-3. 技术微信群分享
-4. 种子用户专属优惠（抽佣减半）
-
-### 6.2 增长策略
-
-**雇主增长**：
-- 完成任务后邀请好友
-- 复购优惠
-- 口碑传播
-
-**AI方增长**：
-- 高评分AI优先展示
-- 完成单数奖励
-- 邀请好友奖励
-
----
-
-## 七、合规简化（v0.4）
-
-### 7.1 合规要求
-
-**MVP阶段简化处理**：
-
-| 要求 | 处理方式 |
-|------|----------|
-| ICP备案 | 购买国内云服务器，按流程备案 |
-| 支付合规 | 使用支付宝/微信支付（已封装） |
-| 税务 | 暂不开发票（用户提供信息代开） |
-| 用户协议 | 基础版用户协议 |
-| 隐私政策 | 基础版隐私政策 |
-
-### 7.2 风险控制
-
-| 风险 | 应对措施 |
-|------|----------|
-| 资金安全 | 资金托管，不挪用 |
-| 欺诈 | 实名认证（逐步） |
-| 争议 | 平台仲裁机制 |
-| 数据安全 | 基础加密存储 |
-
----
-
-## 八、实施路线图
-
-### 8.1 版本规划
-
-| 版本 | 时间 | 目标 |
+| 目标 | 数量 | 方式 |
 |------|------|------|
-| **v0.4** | 2026-02~03 | MVP 设计、技术选型 |
-| **v0.5** | 2026-04~05 | 原型开发、内部测试 |
-| **v1.0** | 2026-06 | MVP 上线、种子用户 |
-| **v1.1** | 2026-07 | 智能匹配、AI需求解析 |
-| **v1.2** | 2026-08 | 第三方集成、App |
+| 种子发起人 | 20人 | 技术社区招募 |
+| 种子参与者 | 50人 | 开发者社区 |
+| 种子企业 | 3家 | 内部试用 |
 
-### 8.2 v0.4交付物
+### 8.2 增长策略
 
-| 交付物 | 内容 | 格式 |
-|--------|------|------|
-| 需求文档 | 本文档 | Markdown |
-| 原型设计 | UI界面稿 | Figma |
-| 接口文档 | API定义 | Swagger |
-| 数据库设计 | 表结构 | ER图 |
-| 技术方案 | 部署架构 | 架构图 |
+- GitHub活跃用户导入
+- 技术博主合作
+- 开发者社区推广
+- 企业案例口碑
 
 ---
 
-## 九、成功指标（v0.4 MVP）
+## 九、MVP功能清单
 
-### 9.1 核心指标
+### 9.1 P0必须功能
 
-| 指标 | 目标值 | 说明 |
-|------|--------|------|
-| 月活跃雇主 | ≥ 50 | 发布过任务的雇主 |
-| 月活跃AI方 | ≥ 100 | 接过单的AI方 |
-| 月交易额 | ≥ ¥30,000 | 平台GMV |
-| 任务完成率 | ≥ 80% | 验收通过/发布任务 |
-| 好评率 | ≥ 4.0/5.0 | 平均评分 |
+| 模块 | 功能 | 说明 |
+|------|------|------|
+| **项目中心** | 发布项目 | 表单+环节拆解 |
+| | 管理项目 | 进度查看 |
+| | 项目列表 | 公开项目浏览 |
+| **环节市场** | 浏览环节 | 按技能筛选 |
+| | 认领环节 | 申请参与 |
+| **参与者** | 专长标签 | 自定义 |
+| | 个人档案 | 历史记录 |
+| | 系统评分 | 完成率/评分 |
+| **贡献度** | 贡献记录 | Git自动追踪 |
+| | 分成计算 | 按贡献分配 |
+| **结算** | 社区现金 | 支付宝结算 |
+| | 企业积分 | 积分统计 |
+| **消息** | 任务沟通 | 基础IM |
+| | 通知 | 状态变更 |
 
-### 9.2 验证假设
+### 9.2 P1延后功能
+
+| 功能 | 原因 |
+|------|------|
+| GitHub自动集成 | 复杂 |
+| 企业管理员配置 | 延后 |
+| 积分商城 | 延后 |
+| 高级贡献分析 | 延后 |
+
+---
+
+## 十、成功指标
+
+### 10.1 核心指标
+
+| 指标 | MVP目标 | v1.0目标 |
+|------|---------|-----------|
+| 月活跃发起人 | 20人 | 100人 |
+| 月活跃参与者 | 50人 | 500人 |
+| 月项目数 | 30个 | 200个 |
+| 月交易额 | ¥50,000 | ¥500,000 |
+| 贡献完成率 | 75% | 85% |
+| 好评率 | 4.0/5.0 | 4.5/5.0 |
+
+### 10.2 验证假设
 
 | 假设 | 验证方式 | 通过标准 |
 |------|----------|----------|
-| 有AI外包需求 | 雇主发布任务 | 发布数 > 50/月 |
-| 有AI方愿意接单 | AI方接单 | 接单数 > 100/月 |
-| 愿意付费 | 支付完成 | 支付率 > 80% |
-| 愿意复购 | 复购率 | 复购率 > 20% |
+| 有人愿意发起项目 | 项目发布数 | >30/月 |
+| 有人愿意参与 | 认领数/项目 | >2人/项目 |
+| 愿意现金分成 | 社区项目占比 | >50% |
+| 愿意用积分 | 企业项目占比 | >30% |
 
 ---
 
-## 十、团队与分工（v0.4阶段）
+## 附录：核心流程图
 
-### 10.1 最小团队
-
-| 角色 | 职责 | 人数 |
-|------|------|------|
-| 产品 | 需求设计、原型 | 1人 |
-| 前端 | React开发 | 1人 |
-| 后端 | Node.js开发 | 1人 |
-| 运维 | 部署、监控 | 1人(兼) |
-| **合计** | | **3-4人** |
-
-### 10.2 外包可能
-
-| 环节 | 可外包 | 建议 |
-|------|--------|------|
-| 前端UI | ✅ | 组件成熟 |
-| 后端API | ✅ | 逻辑简单 |
-| 部署运维 | ✅ | 阿里云托管 |
-| 产品设计 | ❌ | 需要频繁沟通 |
-
----
-
-## 附录A：MVP功能清单
-
-### A.1 必须功能（P0）
-
-| 模块 | 功能 | 优先级 |
-|------|------|--------|
-| 需求发布 | 任务发布表单 | P0 |
-| 需求发布 | 任务模板 | P0 |
-| 任务大厅 | 任务列表 | P0 |
-| 任务大厅 | 任务筛选 | P0 |
-| 任务大厅 | 接单申请 | P0 |
-| 我的项目 | 项目看板 | P0 |
-| 我的项目 | 进度更新 | P0 |
-| 我的项目 | 成果提交 | P0 |
-| 我的项目 | 验收功能 | P0 |
-| 资金中心 | 资金托管 | P0 |
-| 资金中心 | 结算支付 | P0 |
-| 资金中心 | 提现功能 | P0 |
-| 用户中心 | 注册登录 | P0 |
-| 用户中心 | 简单评分 | P0 |
-| 消息中心 | 任务沟通 | P0 |
-| 消息中心 | 系统通知 | P0 |
-
-### A.2 延后功能（P1）
-
-| 模块 | 功能 | 延后原因 |
-|------|------|----------|
-| 需求发布 | AI需求解析 | 技术复杂 |
-| 需求发布 | 智能推荐 | 数据不足 |
-| 任务大厅 | 智能匹配 | 数据不足 |
-| 用户中心 | 详细信誉 | 复杂度高 |
-| 第三方集成 | GitHub绑定 | 优先级低 |
-
----
-
-## 附录B：数据库表设计（简版）
-
-### B.1 核心表
-
-| 表名 | 说明 |
-|------|------|
-| users | 用户表 |
-| tasks | 任务表 |
-| task_applications | 接单申请表 |
-| projects | 项目表 |
-| messages | 消息表 |
-| transactions | 资金表 |
-| reviews | 评价表 |
-
-### B.2 ER关系
+### 发布项目流程
 
 ```
-users 1──N tasks (雇主)
-users 1──N task_applications (AI方)
-task_applications 1──1 projects
-projects 1──N messages
-users 1──N reviews
-tasks 1──1 transactions
+填写项目信息
+     │
+     ▼
+拆解项目环节
+     │
+     ▼
+设置每环节预算/要求
+     │
+     ▼
+选择模式（社区/企业）
+     │
+     ▼
+发布项目
+     │
+     ▼
+等待参与者认领
+```
+
+### 认领环节流程
+
+```
+浏览环节市场
+     │
+     ▼
+筛选适合的环节
+     │
+     ▼
+查看环节详情
+     │
+     ▼
+申请认领
+     │
+     ▼
+发起人确认
+     │
+     ▼
+开始贡献
+```
+
+### 分成结算流程
+
+```
+项目完成
+     │
+     ▼
+发起人验收
+     │
+     ▼
+生成贡献报告
+     │
+     ▼
+参与者确认
+     │
+     ▼
+争议期（7天）
+     │
+     ▼
+资金/积分分配
 ```
 
 ---
 
 **文档版本**: v0.4
 **更新日期**: 2026-02-17
-**设计原则**: 聚焦MVP可落地性，快速验证商业模式
+**设计原则**: 项目协作平台，区分社区/企业双模式，按实际贡献分成
