feat: 补充项目加密功能
**加密功能设计**：
- 环节加密：选择哪些环节加密
- 资料加密：项目描述、环节详情、代码、交付件、沟通记录
- 密钥管理：发起人总密钥 + 参与者子密钥
- 分发方式：手动确认后分发（AES-256）
- 密钥撤销：放弃环节/项目结束/密钥泄露/争议处理

**需求规格说明书**：
- 新增项目加密模块（2.2 MVP核心功能）
- 新增加密字段设计
- 新增加密流程和密钥管理章节
- 新增密钥撤销场景

**场景设计文档**：
- 新增场景七：项目加密与密钥管理
- 6个步骤：发布加密项目→申请认领→分发密钥→接收使用→加密交付→密钥管理

文件：
- requirements/产品需求规格说明书_v0.4.md (更新)
- scenarios/场景设计文档_v0.4.md (新增场景七)

--- a/requirements/产品需求规格说明书_v0.4.md
+++ b/requirements/产品需求规格说明书_v0.4.md
@@ -78,6 +78,9 @@
 | | 企业：积分 | 工时/积分统计 |
 | **消息中心** | 任务沟通 | 协作沟通 |
 | | 系统通知 | 状态变更通知 |
+| **项目加密** | 环节加密 | 选择哪些环节加密 |
+| | 资料加密 | 加密项目资料和交付件 |
+| | 密钥管理 | 发起人分发子密钥 |
 
 ---
 
@@ -93,7 +96,18 @@
   visibility: [公开/私有]      # 社区=公开，企业=私有
   mode: [社区/企业]           # 选择模式
   total_budget: 10000         # 社区模式必填（预算）
-  
+
+  # 加密设置
+  encryption:
+    enabled: true/false        # 是否开启加密
+    milestones: [1, 2]       # 需要加密的环节索引列表
+    materials:               # 需要加密的资料类型
+      - project_desc         # 项目描述
+      - milestone_details     # 环节详情
+      - code_repository      # 代码仓库
+      - deliverables        # 交付件
+      - chat_records         # 沟通记录
+
   # 环节拆解
   milestones:
     - name: 环节1名称
@@ -101,7 +115,8 @@
       budget: 3000            # 环节预算
       skills: [Python, React]  # 需要的专长
       evidence: [代码, 文档]   # 需要提交的成果
-    
+      encrypted: true/false    # 是否加密
+
     - name: 环节2名称
       # ...
 ```
@@ -123,9 +138,8 @@
    ├─ 测试记录
    ├─ 问题修复
    └─ 技术支持
-```
 
-**贡献计算**：
+贡献计算：
 ```
 贡献度 = Σ(贡献权重 × 贡献数量) / 总贡献
 
@@ -138,7 +152,100 @@
 
 ---
 
-## 四、参与者与专长
+## 四、项目加密功能
+
+### 4.1 加密设置
+
+**加密粒度**：
+| 类型 | 说明 |
+|------|------|
+| **环节加密** | 每个环节独立加密 |
+| **资料加密** | 项目资料和交付件加密 |
+
+**可加密内容**：
+| 内容 | 说明 |
+|------|------|
+| 项目描述 | 项目基本信息 |
+| 环节详情 | 每个环节的详细描述 |
+| 代码仓库 | Git代码仓库 |
+| 交付件 | 完成的代码/文档/成果 |
+| 沟通记录 | 任务沟通记录 |
+
+### 4.2 密钥管理
+
+**密钥类型**：
+| 类型 | 拥有者 | 权限 |
+|------|--------|------|
+| **总密钥** | 发起人 | 管理所有子密钥，解密所有内容 |
+| **子密钥** | 参与者 | 仅解密自己参与的环节 |
+
+**密钥分发流程**：
+```
+参与者申请认领
+       │
+       ▼
+   发起人确认
+       │
+       ├── 拒绝 → 不分配密钥
+       │
+       ▼
+   生成子密钥（AES-256）
+       │
+       ▼
+   安全分发（加密传输）
+       │
+       ▼
+   参与者接收并存储
+```
+
+### 4.3 加密流程
+
+**加密算法**：AES-256-GCM（对称加密）
+
+**加密流程**：
+```python
+# 发起人加密
+master_key = generate_aes256_key()  # 生成主密钥
+
+# 环节加密
+for milestone in encrypted_milestones:
+    encrypted_content = aes256_encrypt(
+        content=milestone.description,
+        key=master_key
+    )
+    store_encrypted(encrypted_content)
+
+# 子密钥生成
+participant_key = aes256_encrypt(
+    content=master_key,
+    key=participant_public_key  # 用参与者公钥加密
+)
+
+# 参与者解密
+master_key = aes256_decrypt(
+    encrypted_key=participant_key,
+    key=participant_private_key  # 用私钥解密
+)
+
+content = aes256_decrypt(
+    encrypted_content=encrypted_content,
+    key=master_key
+)
+```
+
+### 4.4 密钥撤销
+
+**撤销场景**：
+| 场景 | 处理方式 |
+|------|----------|
+| 参与者放弃环节 | 自动撤销子密钥 |
+| 项目结束 | 自动删除所有密钥 |
+| 密钥泄露 | 发起人可重新生成主密钥 |
+| 争议处理 | 平台可协助解密（仲裁需要） |
+
+---
+
+## 五、参与者与专长
 
 ### 4.1 专长标签
 
