--- a/scenarios/场景设计文档_v0.4.md
+++ b/scenarios/场景设计文档_v0.4.md
@@ -509,3 +509,173 @@
 **文档版本**: v0.4
 **更新日期**: 2026-02-17
 **设计原则**：项目协作平台场景，区分社区/企业双模式，按实际贡献分成
+
+---
+
+## 场景七：项目加密与密钥管理
+
+### 场景描述
+发起人张三发布一个商业项目，选择加密环节和资料，手动分发密钥给参与者。
+
+### 流程
+
+```
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 1：发布加密项目                                                  │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 项目表单（加密设置）：                                                  │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 加密设置：                                                           │   │
+│ │ ├─ [x] 开启加密                                                   │   │
+│ │                                                                    │   │
+│ │ 需要加密的环节：                                                     │   │
+│ │ ├─ [x] 环节1：后端API开发                                        │   │
+│ │ ├─ [x] 环节2：前端界面开发                                        │   │
+│ │ └─ [ ] 环节3：文档编写（不需要加密）                              │   │
+│ │                                                                    │   │
+│ │ 需要加密的资料：                                                     │   │
+│ │ ├─ [x] 项目描述                                                   │   │
+│ │ ├─ [x] 环节详情                                                   │   │
+│ │ ├─ [x] 代码仓库                                                   │   │
+│ │ ├─ [x] 交付件                                                     │   │
+│ │ └─ [x] 沟通记录                                                   │   │
+│ │                                                                    │   │
+│ │ 密钥分发：[●手动确认后分发 ○自动分发]                             │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 2：参与者申请认领                                                 │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 李四申请认领环节1：                                                      │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 申请信息：                                                          │   │
+│ │ 环节：后端API开发（已加密）                                        │   │
+│ │                                                                    │   │
+│ │ 备注：有3年Python经验，熟悉FastAPI                                  │   │
+│ │                                                                    │   │
+│ │ [提交申请]                                                          │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 3：发起人确认并分发密钥                                           │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 发起人确认：                                                            │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 申请者：李四                                                         │   │
+│ │ 环节：后端API开发（加密）                                           │   │
+│ │ 评分：4.7/5.0                                                      │   │
+│ │                                                                    │   │
+│ │ [确认并分发密钥]  [拒绝]  [再看看]                               │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 密钥分发：                                                              │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ ✅ 密钥已生成（AES-256）                                          │   │
+│ │                                                                    │   │
+│ │ 子密钥已安全发送给李四                                             │   │
+│ │ 密钥ID：KEY-2026-0217-001-001                                   │   │
+│ │ 有效时间：项目结束自动失效                                          │   │
+│ │                                                                    │   │
+│ │ ⚠️ 请李四确认接收密钥                                               │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 4：参与者接收并使用密钥                                           │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 李四接收密钥：                                                          │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🔐 收到新密钥                                                      │   │
+│ │                                                                    │   │
+│ │ 项目：AI代码审查工具                                                │   │
+│ │ 环节：后端API开发                                                  │   │
+│ │ 密钥ID：KEY-2026-0217-001-001                                   │   │
+│ │                                                                    │   │
+│ │ [确认接收]  [查看密钥详情]                                        │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 李四解密查看环节详情：                                                   │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🔓 已解密                                                          │   │
+│ │                                                                    │   │
+│ │ 环节1：后端API开发（加密）                                          │   │
+│ │ 描述：开发审查API，支持多语言                                       │   │
+│ │ 需要成果：API文档 + 单元测试                                        │   │
+│ │                                                                    │   │
+│ │ 💡 李四可以使用密钥解密查看所有加密内容                            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 5：加密交付                                                      │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 李四提交加密交付件：                                                    │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 提交交付件：                                                        │   │
+│ │ 代码仓库：https://github.com/li4/ai-review-api (已加密)          │   │
+│ │                                                                    │   │
+│ │ 上传文件：                                                          │   │
+│ │ ├─ [x] API代码包 (已加密)                                         │   │
+│ │ ├─ [x] API文档 (已加密)                                           │   │
+│ │ └─ [x] 单元测试 (已加密)                                           │   │
+│ │                                                                    │   │
+│ │ [确认提交]                                                          │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 发起人查看交付件：                                                     │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🔓 使用总密钥解密                                                   │   │
+│ │                                                                    │   │
+│ │ 交付件已解密：                                                      │   │
+│ │ ├─ API代码包：已解密 ✅                                           │   │
+│ │ ├─ API文档：已解密 ✅                                             │   │
+│ │ └─ 单元测试：已解密 ✅                                             │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 6：密钥管理                                                      │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 发起人管理密钥：                                                        │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 密钥管理面板                                                        │   │
+│ │                                                                    │   │
+│ │ 已分发密钥：                                                        │   │
+│ │ ├─ KEY-2026-0217-001-001 │ 李四 │ 环节1 │ [查看] [撤销]       │   │
+│ │ ├─ KEY-2026-0217-001-002 │ 王五 │ 环节2 │ [查看] [撤销]       │   │
+│ │ └─ KEY-2026-0217-001-003 │ 赵六 │ 环节3 │ [查看] [撤销]       │   │
+│ │                                                                    │   │
+│ │ 操作：                                                              │   │
+│ │ ├─ [查看所有密钥]                                                  │   │
+│ │ ├─ [重新生成主密钥] ⚠️                                            │   │
+│ │ └─ [导出密钥记录]                                                  │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 密钥撤销场景：                                                          │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 场景                                                              │   │
+│ │ ├─ 参与者放弃环节 → 自动撤销子密钥 ✅                             │   │
+│ │ ├─ 项目结束 → 自动删除所有密钥 ✅                                 │   │
+│ │ ├─ 密钥泄露 → 发起人可重新生成主密钥 ⚠️                          │   │
+│ │ └─ 争议处理 → 平台可协助解密（需仲裁）                            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
